--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       </div>
     </div>
     <h1 id="instruction-text">Press Spacebar To Start Game</h1>
-    <img src="./snake-game-ai-gen.png" alt="Snake Logo" />
+    <img id="logo" src="./snake-game-ai-gen.png" alt="Snake Logo" />
   </body>
 </html>
